force-app/main/default/objects/SFDC_Project_Team__c/SFDC_Project_Team__c.object-meta.xml
<CustomObject>
    <description>Team members</description>
    <label>Project Team</label>
    <nameField>
        <displayFormat>Team - {0000}</displayFormat>
        <label>Project Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>