force-app/main/default/objects/SFDC_Project_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N700000024dAnEAI</relationshipName>
    <type>Lookup</type>
</CustomField>