force-app/main/default/objects/SFDC_Project_Team__c/fields/SFDC_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project__c</fullName>
    <label>Project</label>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipName>R00N700000024dAVEAY</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>