force-app/main/default/objects/SFDC_Project_Team__c/fields/SFDC_Project_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Team_Name__c</fullName>
    <description>Team Name</description>
    <label>Project Member</label>
    <length>80</length>
    <type>Text</type>
</CustomField>