force-app/main/default/objects/SFDC_Project_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>SFDC_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>